<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>ScriptAppPage</class>
 <widget class="QWidget" name="ScriptAppPage">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>512</width>
    <height>390</height>
   </rect>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <widget class="QGroupBox" name="groupBox">
     <property name="title">
      <string>Script</string>
     </property>
     <layout class="QGridLayout" name="gridLayout">
      <item row="2" column="1">
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
         <widget class="QRadioButton" name="executableRadio">
          <property name="enabled">
           <bool>true</bool>
          </property>
          <property name="text">
           <string/>
          </property>
         </widget>
        </item>
        <item>
         <widget class="KUrlRequester" name="executablePath">
          <property name="enabled">
           <bool>false</bool>
          </property>
          <property name="clickMessage">
           <string>Enter the absolute path to a script file</string>
          </property>
         </widget>
        </item>
       </layout>
      </item>
      <item row="1" column="1">
       <layout class="QHBoxLayout" name="horizontalLayout_2">
        <item>
         <widget class="QRadioButton" name="projectTargetRadio">
          <property name="text">
           <string/>
          </property>
          <property name="checked">
           <bool>true</bool>
          </property>
         </widget>
        </item>
        <item>
         <widget class="ProjectItemLineEdit" name="projectTarget">
          <property name="clickMessage">
           <string>Enter a project target as path in the tree</string>
          </property>
         </widget>
        </item>
       </layout>
      </item>
      <item row="2" column="0">
       <widget class="QLabel" name="label_2">
        <property name="text">
         <string>Script:</string>
        </property>
        <property name="buddy">
         <cstring>executableRadio</cstring>
        </property>
       </widget>
      </item>
      <item row="1" column="0">
       <widget class="QLabel" name="label">
        <property name="text">
         <string>Project Target:</string>
        </property>
        <property name="buddy">
         <cstring>projectTargetRadio</cstring>
        </property>
       </widget>
      </item>
      <item row="0" column="0">
       <widget class="QLabel" name="label_7">
        <property name="text">
         <string>Interpreter:</string>
        </property>
        <property name="buddy">
         <cstring>interpreter</cstring>
        </property>
       </widget>
      </item>
      <item row="0" column="1">
       <widget class="KLineEdit" name="interpreter"/>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <widget class="QGroupBox" name="groupBox_3">
     <property name="title">
      <string>Execute on Host</string>
     </property>
     <layout class="QGridLayout" name="gridLayout_3">
      <item row="0" column="0" colspan="2">
       <widget class="QRadioButton" name="localHostRadio">
        <property name="text">
         <string>Local Host</string>
        </property>
        <property name="checked">
         <bool>true</bool>
        </property>
       </widget>
      </item>
      <item row="1" column="0">
       <widget class="QRadioButton" name="remoteHostRadio">
        <property name="text">
         <string>Remote Host (ssh):</string>
        </property>
       </widget>
      </item>
      <item row="1" column="1">
       <widget class="KLineEdit" name="remoteHost">
        <property name="enabled">
         <bool>false</bool>
        </property>
        <property name="clickMessage">
         <string>Enter a remote host (user@example.com)</string>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <widget class="QGroupBox" name="groupBox_2">
     <property name="title">
      <string>Behavior</string>
     </property>
     <layout class="QGridLayout" name="gridLayout_2">
      <item row="0" column="0">
       <widget class="QLabel" name="label_3">
        <property name="text">
         <string>Arguments:</string>
        </property>
        <property name="buddy">
         <cstring>arguments</cstring>
        </property>
       </widget>
      </item>
      <item row="0" column="1">
       <widget class="KLineEdit" name="arguments">
        <property name="toolTip">
         <string>Enter arguments to give to the executable</string>
        </property>
        <property name="clickMessage">
         <string>Enter arguments to give to the executable</string>
        </property>
       </widget>
      </item>
      <item row="1" column="0">
       <widget class="QLabel" name="label_4">
        <property name="text">
         <string>Working Directory:</string>
        </property>
        <property name="buddy">
         <cstring>workingDirectory</cstring>
        </property>
       </widget>
      </item>
      <item row="1" column="1">
       <widget class="KUrlRequester" name="workingDirectory">
        <property name="toolTip">
         <string>Select a working directory for the executable</string>
        </property>
        <property name="clickMessage">
         <string>Select a working directory for the executable</string>
        </property>
       </widget>
      </item>
      <item row="2" column="0">
       <widget class="QLabel" name="label_5">
        <property name="text">
         <string>Environment:</string>
        </property>
        <property name="buddy">
         <cstring>environment</cstring>
        </property>
       </widget>
      </item>
      <item row="2" column="1">
       <widget class="KDevelop::EnvironmentSelectionWidget" name="environment">
        <property name="toolTip">
         <string>Select an environment to be used</string>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>KComboBox</class>
   <extends>QComboBox</extends>
   <header>kcombobox.h</header>
  </customwidget>
  <customwidget>
   <class>KLineEdit</class>
   <extends>QLineEdit</extends>
   <header>klineedit.h</header>
  </customwidget>
  <customwidget>
   <class>KUrlRequester</class>
   <extends>QFrame</extends>
   <header>kurlrequester.h</header>
  </customwidget>
  <customwidget>
   <class>KDevelop::EnvironmentSelectionWidget</class>
   <extends>KComboBox</extends>
   <header>util/environmentselectionwidget.h</header>
  </customwidget>
  <customwidget>
   <class>ProjectItemLineEdit</class>
   <extends>KLineEdit</extends>
   <header>project/projectitemlineedit.h</header>
  </customwidget>
 </customwidgets>
 <tabstops>
  <tabstop>interpreter</tabstop>
  <tabstop>projectTargetRadio</tabstop>
  <tabstop>projectTarget</tabstop>
  <tabstop>executableRadio</tabstop>
  <tabstop>executablePath</tabstop>
  <tabstop>localHostRadio</tabstop>
  <tabstop>remoteHostRadio</tabstop>
  <tabstop>remoteHost</tabstop>
  <tabstop>arguments</tabstop>
  <tabstop>workingDirectory</tabstop>
  <tabstop>environment</tabstop>
 </tabstops>
 <resources/>
 <connections>
  <connection>
   <sender>projectTargetRadio</sender>
   <signal>toggled(bool)</signal>
   <receiver>projectTarget</receiver>
   <slot>setEnabled(bool)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>140</x>
     <y>82</y>
    </hint>
    <hint type="destinationlabel">
     <x>485</x>
     <y>87</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>projectTargetRadio</sender>
   <signal>toggled(bool)</signal>
   <receiver>executablePath</receiver>
   <slot>setDisabled(bool)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>140</x>
     <y>82</y>
    </hint>
    <hint type="destinationlabel">
     <x>490</x>
     <y>117</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>executableRadio</sender>
   <signal>toggled(bool)</signal>
   <receiver>projectTarget</receiver>
   <slot>setDisabled(bool)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>140</x>
     <y>112</y>
    </hint>
    <hint type="destinationlabel">
     <x>490</x>
     <y>87</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>executableRadio</sender>
   <signal>toggled(bool)</signal>
   <receiver>executablePath</receiver>
   <slot>setEnabled(bool)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>140</x>
     <y>112</y>
    </hint>
    <hint type="destinationlabel">
     <x>490</x>
     <y>117</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>remoteHostRadio</sender>
   <signal>toggled(bool)</signal>
   <receiver>remoteHost</receiver>
   <slot>setEnabled(bool)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>151</x>
     <y>205</y>
    </hint>
    <hint type="destinationlabel">
     <x>213</x>
     <y>206</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
